# github-secrets

./: .allowlister.json  .buildinfo  .commitlintrc.yml  .cruft.json  .gitignore  .tool-versions  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Pipfile  README.md  conf.py  env.template.py  genindex.html  gh-secrets.json  index.html  justfile  objects.inv  py-modindex.html  release-please-config.json  search.html  searchindex.js  sitemap.xml  tutorial.html
.claude/: settings.json
.github/: dependabot.yml  labels.yml
.github/workflows/: automerge.yml  bench.yml  ci.yml  docs.yml  package.yml  pr-lint.yml  release.yml  template-update.yml
_modules/: index.html
_modules/github_secrets/: app.html  config.html  console_styles.html  exc.html  git.html  manager.html
_sources/: tutorial.rst.txt
_sources/api/: github_secrets.rst.txt  modules.rst.txt
api/: github_secrets.html  modules.html
auto_examples/: index.html
benches/: AGENTS.md  engine.rs  engine_allocs.rs
benches/support/: mod.rs
binder/: requirements.txt
docsrc/: Makefile
docsrc/source/: index.rst  tutorial.rst
github_secrets/: app.py  cli.py  config.py  console_styles.py  exc.py  git.py  manager.py
scripts/: bench-instructions.sh  bench.sh  bw-e2e-env.sh  install-nextest.sh  install.sh  session-setup.sh
src/: cli.rs  config.rs  credentials.rs  destinations.rs  engine.rs  envfile.rs  github.rs  lib.rs  main.rs  manifest.rs  paths.rs  secrets.rs  sources.rs  sync.rs  sync_manifest.rs  vault.rs
tests/: __init__.py  config.py  conftest.py  e2e.rs  e2e_auth.rs  e2e_live.rs  e2e_live_bitwarden.rs  e2e_manifest.rs  generate.py  test_app.py  test_github.py  test_local.py  test_manager.py  test_sync.py
tests/common/: mod.rs
tests/fixtures/: model.py
tests/input_data/: app.yaml  config.toml  config.yaml
tests/live_bw_common/: mod.rs
tests/live_common/: mod.rs
