[package]
name = "gh-secrets"
version = "1.0.2"
edition = "2021"
rust-version = "1.85"
description = "A CLI for managing GitHub Actions repository secrets in bulk"
license = "MIT"
repository = "https://github.com/nickderobertis/github-secrets"
readme = "README.md"
keywords = ["github", "secrets", "cli", "actions"]
categories = ["command-line-utilities"]

[[bin]]
name = "gh-secrets"
path = "src/main.rs"

[lib]
name = "gh_secrets"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = "0.10"
clap = { version = "4.5", features = ["derive", "env"] }
crypto_box = { version = "0.9", features = ["seal"] }
dirs = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
assert_cmd = "2.0"
# Encodes seeded Bitwarden items for the live e2e suite (`bw create item`
# wants a base64 of the item JSON). Already a normal dependency; listed here so
# the integration tests can use it too.
base64 = "0.22"
predicates = "3.1"
tempfile = "3.13"
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# Engine micro-benchmarks (`benches/engine.rs`). default-features off keeps the
# plotters/gnuplot/rayon stack out of the build; `cargo_bench_support` is the
# only feature the harness needs, and critcmp reads the JSON Criterion writes
# regardless.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "engine"
harness = false

[[bench]]
name = "engine_allocs"
harness = false

[profile.release]
strip = true
lto = "thin"
codegen-units = 1

# Codegen-matched to `release` but with symbols kept, so cachegrind/callgrind in
# scripts/bench-instructions.sh count the shipped code path and a regression can
# still be annotated back to source afterwards.
[profile.profiling]
inherits = "release"
debug = true
strip = false
